// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`communication/send-email/mailgun SendEmail sends email with attachements 1`] = `
Ok {
  "value": Object {
    "messageId": "<20220110105344.5efe479771b385a6@demo.superface.org>",
  },
}
`;

exports[`communication/send-email/mailgun SendEmail when all inputs are correct should return messageId as result 1`] = `
Ok {
  "value": Object {
    "messageId": "<20220110105342.48d62d6b5013cbfb@demo.superface.org>",
  },
}
`;

exports[`communication/send-email/mailgun SendEmail when inputs are invalid should throw an exception 1`] = `
Err {
  "error": "HTTPError: Expected HTTP error
Properties: {
  \\"title\\": \\"Invalid inputs\\",
  \\"detail\\": \\"from parameter is not a valid address. please check documentation\\"
}
AST Path: definitions[0].statements[4].responseHandlers[1].statements[0]
Original Map Location: Line 39, column 7",
}
`;
